# comfyui-deploy

./: .gitignore  LICENSE  README.md  __init__.py  biome.json  bun.lockb  custom_routes.py  docker-compose.yaml  globals.py  package.json  perf_counter.py  prestartup_script.py  pyproject.toml  requirements.txt  routes.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
comfy-nodes/: comfy_std_output.py  comfy_std_output_image.py  dummy_pnginfo.py  external_audio.py  external_boolean.py  external_checkpoints.py  external_enum.py  external_exr.py  external_exr_input.py  external_exr_output.py  external_exr_sequence_input.py  external_exr_sequence_output.py  external_face_model.py  external_file.py  external_image.py  external_image_alpha.py  external_image_batch.py  external_lora.py  external_number.py  external_number_int.py  external_number_slider.py  external_number_slider_int.py  external_seed.py  external_string_combine.py  external_text.py  external_text_any.py  external_text_list.py  external_vid.py  external_video.py  http_exr_input.py  http_exr_output.py  http_exr_sequence_input.py  http_exr_sequence_output.py  input_http_exr.py  input_http_exr_sequence.py  input_hybrid_exr.py  input_websocket_exr.py  input_websocket_image.py  model_list.py  outerport_load_model.py  (+8 more)
example_workflows/: lora-model.json  maks.json
examples/: flux-dev.json  flux-schnell.json  hunyuan-video.json  stable-diffusion-v15.json  stable-diffusion-v35-large.json  wan-21-i2v-480p.json  wav-21-i2v-720p.json  wav-21-t2v-13b.json
local/: Dockerfile
(+422 files in other folders)
